--- a/middle-ui/bower.json
+++ b/middle-ui/bower.json
@@ -20,6 +20,7 @@
     "bootstrap": "^3.3.6",
     "angular": "1.5.0",
     "angular-bootstrap": "^1.2.1",
-    "angular-ui-router": "^0.2.18"
+    "angular-ui-router": "^0.2.18",
+    "angular-clipboard": "^1.3.0"
   }
 }
