--- a/middle-ui/bower.json
+++ b/middle-ui/bower.json
@@ -21,6 +21,8 @@
     "angular": "1.5.0",
     "angular-bootstrap": "^1.2.1",
     "angular-ui-router": "^0.2.18",
-    "angular-clipboard": "^1.3.0"
+    "angular-clipboard": "^1.3.0",
+    "angular-animate": "^1.5.0",
+    "angular-touch": "^1.5.0"
   }
 }
