--- a/middle-ui/bower.json
+++ b/middle-ui/bower.json
@@ -24,6 +24,7 @@
     "angular-clipboard": "^1.3.0",
     "angular-animate": "^1.5.0",
     "angular-touch": "^1.5.0",
-    "angular-resource": "^1.5.0"
+    "angular-resource": "^1.5.0",
+    "reconnectingWebsocket": "^1.0.0"
   }
 }
